# tflite_image_classification

./: CMakeLists.txt  README  README.md  diqa_image.cpp  diqa_webcam.cpp
models/: diqa_beta_labels.txt
other/: CMakeLists.txt  demo.cpp  demo_spare.cpp
